cmake_minimum_required(VERSION 2.8)
project(easygo)

add_definitions(-std=c++11)

# cmake -DEASYGO_LIBRARY_TYPE=SHARED
# cmake -DEASYGO_LIBRARY_TYPE=STATIC
if (NOT EASYGO_LIBRARY_TYPE)
	set(EASYGO_LIBRARY_TYPE "STATIC")
endif (NOT EASYGO_LIBRARY_TYPE)

# cmake -DCMAKE_BUILD_TYPE=RELEASE
# cmake -DCMAKE_BUILD_TYPE=DEBUG
if (NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE "DEBUG")
endif (NOT CMAKE_BUILD_TYPE)

# windows: cmake -DEASYGO_LIBRARY_TYPE=STATIC -DCMAKE_BUILD_TYPE=DEBUG .. ..
# linux:   cmake -DEASYGO_LIBRARY_TYPE=STATIC -DCMAKE_BUILD_TYPE=DEBUG ..

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)






